--- a/facilitydetail.html
+++ b/facilitydetail.html
@@ -99,8 +99,24 @@
                             <td>Location A</td>
                         </tr>
                         <tr>
+                            <th>LOCATION 1 BIM</th>
+                            <td>location1_model.bim</td>
+                        </tr>
+                        <tr>
+                            <th>LOCATION 2 NAME</th>
+                            <td>Location B</td>
+                        </tr>
+                        <tr>
+                            <th>LOCATION 2 BIM</th>
+                            <td>location2_model.bim</td>
+                        </tr>
+                        <tr>
                             <th>UPDATE DATE</th>
                             <td>2023-07-31</td>
+                        </tr>
+                        <tr>
+                            <th>UPDATED BY</th>
+                            <td>User1 (Admin)</td>
                         </tr>
                     </tbody>
                 </table>
