--- a/facilitymanage.html
+++ b/facilitymanage.html
@@ -77,7 +77,9 @@
                             <th>ADDRESS <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
                             <th>CATEGORY <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
                             <th>NUMBER OF LOCATIONS <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
+                            <th>BIM MODEL <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
                             <th>UPDATE DATE <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
+                            <th>UPDATED BY <button class="btn btn-sm btn-link">▲</button><button class="btn btn-sm btn-link">▼</button></th>
                             <th>ACTIONS</th>
                         </tr>
                     </thead>
@@ -89,7 +91,9 @@
                             <td>123 Main St</td>
                             <td>Type 1</td>
                             <td>10</td>
+                            <td>Yes</td>
                             <td>2023-07-31</td>
+                            <td>User1 (AD)</td>
                             <td><a href="facilitydetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
                         </tr>
                         <tr>
@@ -98,7 +102,9 @@
                             <td>456 Elm St</td>
                             <td>Type 2</td>
                             <td>5</td>
+                            <td>No</td>
                             <td>2023-07-30</td>
+                            <td>User2 (AD)</td>
                             <td><a href="facilitydetail.html" class="btn btn-primary btn-sm">DETAIL</a></td>
                         </tr>
                         <!-- 他の行も同様に追加 -->
