--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
                 <button id="sidebarToggle" class="btn btn-light btn-sm me-2">Toggle Menu</button>
                 <h1 class="mb-0">inspectionX</h1>
             </div>
-            <a href="mypage.html" class="text-white">MYPAGE</a>
+            <a href="index.html" class="text-white">MY Dashboard</a>
         </div>
     </div>
 </header>
