--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>iXmoc - Create Project Report</title>
+    <title>iXmoc - Privacy Policy</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <style>
@@ -51,8 +51,9 @@
             margin-top: 20px;
             margin-bottom: 10px;
         }
-        .small-font {
-            font-size: 0.875rem;
+        .text-center {
+            text-align: center;
+            margin-top: 20px;
         }
     </style>
 </head>
@@ -64,45 +65,8 @@
             <div include-html="sidebar.html"></div>
 
             <main id="main-content" class="col content">
-                <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
-                        <li class="breadcrumb-item"><a href="projectmanage.html">Project Manage</a></li>
-                        <li class="breadcrumb-item"><a href="projectreportlist.html">Project Report List</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Create Project Report</li>
-                    </ol>
-                </nav>
-                <h2 class="section-title">Create Project Report</h2>
-
-                <form>
-                    <div class="mb-3">
-                        <label for="facilitySelect" class="form-label">Facility</label>
-                        <select id="facilitySelect" class="form-select">
-                            <option selected>Choose...</option>
-                            <option value="Facility1">Facility 1</option>
-                            <option value="Facility2">Facility 2</option>
-                            <option value="Facility3">Facility 3</option>
-                        </select>
-                    </div>
-                    <div class="mb-3">
-                        <label for="locationSelect" class="form-label">Location</label>
-                        <select id="locationSelect" class="form-select">
-                            <option selected>Choose...</option>
-                            <option value="Location1">Location 1</option>
-                            <option value="Location2">Location 2</option>
-                            <option value="Location3">Location 3</option>
-                        </select>
-                    </div>
-                    <div class="mb-3">
-                        <label for="reportFile" class="form-label">Update Report File</label>
-                        <input class="form-control" type="file" id="reportFile">
-                        <small class="form-text text-muted small-font">対応ファイル：ifc/ply/obj/fbx</small>
-                    </div>
-                    <div class="text-center">
-                        <button type="button" class="btn btn-secondary" onclick="window.location.href='projectreportlist.html'">CANCEL</button>
-                        <button type="submit" class="btn btn-primary btn-lg">CREATE</button>
-                    </div>
-                </form>
+                <h1 class="text-center">Privacy Policy</h1>
+                <p class="text-center">This page will contain the static privacy policy.</p>
             </main>
         </div>
     </div>
