--- a/projectreportcompare.html
+++ b/projectreportcompare.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>iXmoc - Create Project Report</title>
+    <title>iXmoc - Project Report Compare</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <style>
@@ -51,8 +51,32 @@
             margin-top: 20px;
             margin-bottom: 10px;
         }
-        .small-font {
-            font-size: 0.875rem;
+        .viewer {
+            background-color: #ccc;
+            width: calc(100% - 260px);
+            height: 500px;
+            margin-left: 60px;
+            position: relative;
+        }
+        .viewer img {
+            width: 100%;
+            height: 100%;
+        }
+        .overlay-text {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+            color: yellow;
+        }
+        .overlay-text .main-text {
+            font-size: 2rem;
+            font-weight: bold;
+        }
+        .overlay-text .sub-text {
+            font-size: 1rem;
+            color: white;
         }
     </style>
 </head>
@@ -69,40 +93,22 @@
                         <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
                         <li class="breadcrumb-item"><a href="projectmanage.html">Project Manage</a></li>
                         <li class="breadcrumb-item"><a href="projectreportlist.html">Project Report List</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Create Project Report</li>
+                        <li class="breadcrumb-item active" aria-current="page">Project Report Compare</li>
                     </ol>
                 </nav>
-                <h2 class="section-title">Create Project Report</h2>
+                <h2 class="section-title">Project: Project Alpha / Facility: Facility One / Report Issued Date: 2023-07-01</h2>
+                
+                <div class="viewer">
+                    <img src="images/3dcompare.png" alt="3D Viewer">
+                    <div class="overlay-text">
+                        <div class="main-text">COMPARE</div>
+                        <div class="sub-text">First choose another report in same project at right window</div>
+                    </div>
+                </div>
 
-                <form>
-                    <div class="mb-3">
-                        <label for="facilitySelect" class="form-label">Facility</label>
-                        <select id="facilitySelect" class="form-select">
-                            <option selected>Choose...</option>
-                            <option value="Facility1">Facility 1</option>
-                            <option value="Facility2">Facility 2</option>
-                            <option value="Facility3">Facility 3</option>
-                        </select>
-                    </div>
-                    <div class="mb-3">
-                        <label for="locationSelect" class="form-label">Location</label>
-                        <select id="locationSelect" class="form-select">
-                            <option selected>Choose...</option>
-                            <option value="Location1">Location 1</option>
-                            <option value="Location2">Location 2</option>
-                            <option value="Location3">Location 3</option>
-                        </select>
-                    </div>
-                    <div class="mb-3">
-                        <label for="reportFile" class="form-label">Update Report File</label>
-                        <input class="form-control" type="file" id="reportFile">
-                        <small class="form-text text-muted small-font">対応ファイル：ifc/ply/obj/fbx</small>
-                    </div>
-                    <div class="text-center">
-                        <button type="button" class="btn btn-secondary" onclick="window.location.href='projectreportlist.html'">CANCEL</button>
-                        <button type="submit" class="btn btn-primary btn-lg">CREATE</button>
-                    </div>
-                </form>
+                <div class="text-center mt-3">
+                    <button type="button" class="btn btn-secondary" onclick="window.location.href='projectreportdetail.html'">BACK</button>
+                </div>
             </main>
         </div>
     </div>
@@ -117,14 +123,19 @@
             document.getElementById('sidebarToggle').addEventListener('click', function() {
                 var sidebar = document.getElementById('sidebar');
                 var mainContent = document.getElementById('main-content');
+                var viewer = document.querySelector('.viewer');
                 if (sidebar.classList.contains('sidebar-expanded')) {
                     sidebar.classList.remove('sidebar-expanded');
                     sidebar.classList.add('sidebar-collapsed');
                     mainContent.classList.add('sidebar-collapsed');
+                    viewer.style.marginLeft = '10px';
+                    viewer.style.width = 'calc(100% - 10px)';
                 } else {
                     sidebar.classList.remove('sidebar-collapsed');
                     sidebar.classList.add('sidebar-expanded');
                     mainContent.classList.remove('sidebar-collapsed');
+                    viewer.style.marginLeft = '60px';
+                    viewer.style.width = 'calc(100% - 60px)';
                 }
             });
         });
