--- a/sidebar.html
+++ b/sidebar.html
@@ -1,5 +1,4 @@
 <nav id="sidebar" class="col-md-3 col-lg-2 sidebar sidebar-expanded">
-    <h4 class="text-center py-2">Menu</h4>
     <ul class="nav flex-column">
         <li class="nav-item">
             <a class="nav-link" href="projectmanage.html">Project Manage</a>
@@ -19,10 +18,10 @@
     </ul>
     <ul class="nav flex-column mt-auto">
         <li class="nav-item">
-            <a class="nav-link small" href="#">How to use</a>
+            <a class="nav-link small" href="howtouse.html">How to use</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link small" href="#">Privacy Policy</a>
+            <a class="nav-link small" href="privacy.html">Privacy Policy</a>
         </li>
     </ul>
     <div class="text-center py-2">
